Changed maxPrice type

--- a/HealthyShop/src/main/resources/templates/food-search.html
+++ b/HealthyShop/src/main/resources/templates/food-search.html
@@ -47,7 +47,7 @@
                         th:errorclass="is-invalid"
                         class="form-control mr-sm-2"
                         style="width: 280px;"
-                        type="search"
+                        type="number"
                         placeholder="Search by food max price..."
                         aria-label="Search"
                         id="searchMaxPrice"
